--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.4.10",
+    "camelcase-keys": "^6.1.1",
     "core-js": "^3.4.4",
+    "lodash.flowright": "^3.5.0",
+    "lodash.get": "^4.4.2",
+    "lodash.pick": "^4.4.0",
+    "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-types": "^1.7.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -21,6 +28,7 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^9.5.0",
