--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "core-js": "^3.4.4",
     "lodash.flowright": "^3.5.0",
     "lodash.get": "^4.4.2",
+    "lodash.isempty": "^4.4.0",
+    "lodash.isplainobject": "^4.0.6",
     "lodash.pick": "^4.4.0",
+    "lodash.throttle": "^4.1.1",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
