--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash.get": "^4.4.2",
     "lodash.isempty": "^4.4.0",
     "lodash.isplainobject": "^4.0.6",
+    "lodash.isstring": "^4.0.1",
     "lodash.pick": "^4.4.0",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.24.0",
