--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash.isstring": "^4.0.1",
     "lodash.pick": "^4.4.0",
     "lodash.throttle": "^4.1.1",
+    "lodash.uniqueid": "^4.0.1",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
