--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash.isempty": "^4.4.0",
     "lodash.isplainobject": "^4.0.6",
     "lodash.isstring": "^4.0.1",
+    "lodash.merge": "^4.6.2",
     "lodash.pick": "^4.4.0",
     "lodash.throttle": "^4.1.1",
     "lodash.uniqueid": "^4.0.1",
